fix: navigator on IE11

--- a/src/css/_mixins.scss
+++ b/src/css/_mixins.scss
@@ -67,3 +67,9 @@
   -moz-border-radius: $value;
   border-radius: $value;
 }
+
+@mixin IE11($element){
+  *::-ms-backdrop , #{$element} {
+    @content;
+  }
+}
